--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -475,7 +475,7 @@
                       </widget>
                      </item>
                      <item row="5" column="1">
-                      <widget class="QGroupBox" name="groupBox_9">
+                      <widget class="QGroupBox" name="gbx_type_load_spectra_file_selector">
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                          <horstretch>0</horstretch>
@@ -487,9 +487,9 @@
                        </property>
                        <layout class="QGridLayout" name="gridLayout_17">
                         <item row="0" column="0">
-                         <layout class="QFormLayout" name="formLayout_11">
+                         <layout class="QFormLayout" name="frm_type_load_spectra_file_selector">
                           <item row="0" column="1">
-                           <widget class="QLineEdit" name="lineEdit_3">
+                           <widget class="QLineEdit" name="txt_type_load_spectra_file_selector_text_file">
                             <property name="sizePolicy">
                              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                               <horstretch>0</horstretch>
@@ -499,7 +499,7 @@
                            </widget>
                           </item>
                           <item row="0" column="0">
-                           <widget class="QLabel" name="label_24">
+                           <widget class="QLabel" name="lbl_type_load_spectra_file_selector_spect_text_file">
                             <property name="text">
                              <string>Spect text file:</string>
                             </property>
